[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/UI/analogstick_base.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/TouchControls/TouchControls.gd" type="Script" id=2]
[ext_resource path="res://textures/UI/analogstick_control.png" type="Texture" id=3]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="TouchControls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 640, 480 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="StickControl" type="Control" parent="Viewport"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = -180.0
margin_right = 208.0
margin_bottom = -52.0

[node name="StickBase" type="TextureRect" parent="Viewport/StickControl"]
self_modulate = Color( 1, 1, 1, 0.623529 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="StickCenter" type="TextureRect" parent="Viewport/StickControl"]
self_modulate = Color( 1, 1, 1, 0.74902 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="ViewportRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true
flip_v = true
